{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "1a7edb65-2de4-4401-a6dc-fd30d5348467",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "c1b24825-77b7-4590-bb48-0e9032f9625d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c136b13a-d5c4-43db-896f-52d389541c12",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrowkeys",
                    "id": "b0064480-9706-422c-95fc-c8729e62964e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "876dd1c9-5c0b-4b75-93b9-45545266d907",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "887462cd-f102-4c46-b24c-c428b3fe8c48",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a92717ab-a017-4117-bba3-4df4d4baa98c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "877c1605-1db8-4224-ba00-c6858c4ee898",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "eb68005c-daad-43de-a65b-09ac233dd24c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "189eeed0-be65-48c9-837c-2a7461eb9034",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "473e23e2-c593-49ed-8d1e-40f1fb195b87",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "15cc16e6-cf66-4f63-9b45-1a59a074039f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c9da31f7-e957-430f-a9a5-b8f53aaf485a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "f50a0cb3-8831-467c-a779-c734b5baf0e6",
            "actions": [
                {
                    "name": "JumpAndJetpack",
                    "type": "Button",
                    "id": "6502bff9-fe64-429f-8003-73cabda741ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9398d06c-4ceb-4e80-ba7e-6491991e91d0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpAndJetpack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2afe8fd8-b9d6-46e6-a597-b69d9d4f131a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpAndJetpack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}